WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
28735
ResourceRequestBase::*[Aa]llowHTTPCookies shouldn't mention http.
https://bugs.webkit.org/show_bug.cgi?id=28735
Summary
ResourceRequestBase::*[Aa]llowHTTPCookies shouldn't mention http.
David Levin
Reported
2009-08-25 23:24:28 PDT
Since this applies to other request types to other protocols like file:// where cookies can be supported. Renames ResourceRequestBase::setAllowHTTPCookies -> ResourceRequestBase::setAllowCookies ResourceRequestBase::allowHTTPCookies -> ResourceRequestBase::allowCookies
Attachments
Proposed fix.
(12.94 KB, patch)
2009-08-26 10:14 PDT
,
David Levin
fishd
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
David Levin
Comment 1
2009-08-26 10:14:10 PDT
Created
attachment 38617
[details]
Proposed fix.
David Levin
Comment 2
2009-08-26 14:58:12 PDT
http://trac.webkit.org/changeset/47797
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug