WebCore: ResourceRequestBase::*[Aa]llowHTTPCookies shouldn't mention http. https://bugs.webkit.org/show_bug.cgi?id=28735

Patch by David Levin <levin@chromium.org> on 2009-08-26
Reviewed by Darin Fisher.

Renaming the method to imply its wider implications of affecting cookies
over any protocol that supports them.

No change in functionality so no new tests.

* WebCore.order:
* loader/DocumentThreadableLoader.cpp:
(WebCore::DocumentThreadableLoader::DocumentThreadableLoader):
(WebCore::DocumentThreadableLoader::makeSimpleCrossOriginAccessRequest):
(WebCore::DocumentThreadableLoader::makeCrossOriginAccessRequestWithPreflight):
* platform/network/ResourceRequestBase.cpp:
(WebCore::ResourceRequestBase::adopt):
(WebCore::ResourceRequestBase::copyData):
(WebCore::ResourceRequestBase::allowCookies):
(WebCore::ResourceRequestBase::setAllowCookies):
(WebCore::equalIgnoringHeaderFields):
* platform/network/ResourceRequestBase.h:
(WebCore::ResourceRequestBase::ResourceRequestBase):
* platform/network/cf/ResourceRequestCFNet.cpp:
(WebCore::ResourceRequest::doUpdatePlatformRequest):
(WebCore::ResourceRequest::doUpdateResourceRequest):
* platform/network/mac/ResourceRequestMac.mm:
(WebCore::ResourceRequest::doUpdateResourceRequest):
(WebCore::ResourceRequest::doUpdatePlatformRequest):
* platform/network/soup/ResourceRequestSoup.cpp:
(WebCore::ResourceRequest::updateFromSoupMessage):

WebKit/win: ResourceRequestBase::*[Aa]llowHTTPCookies shouldn't mention http.
https://bugs.webkit.org/show_bug.cgi?id=28735

Patch by David Levin <levin@chromium.org> on 2009-08-26
Reviewed by Darin Fisher.

* WebMutableURLRequest.cpp:
(WebMutableURLRequest::setHTTPShouldHandleCookies):

Canonical link: https://commits.webkit.org/39373@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@47797 268f45cc-cd09-0410-ab3c-d52691b4dbfc